--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fabric8-analytics",
   "displayName": "Dependency Analytics",
   "description": "Insights about your application dependencies: Security, License compatibility and AI based guidance to choose appropriate dependencies for your application.",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "author": "Red Hat",
   "publisher": "redhat",
   "preview": true,
@@ -202,7 +202,7 @@
     "remap-istanbul": "^0.12.0"
   },
   "dependencies": {
-    "fabric8-analytics-lsp-server": "0.1.56",
+    "fabric8-analytics-lsp-server": "file:../fabric8-analytics-lsp-server/output",
     "fs": "0.0.1-security",
     "path": "0.12.7",
     "request": "2.88.0",
